# mplayerRadio

./: .gitignore  CMakeLists.txt  Makefile  README.en.md  README.md  main.py  mplayerRadio.c  mplayerRadio.service  oled.c  oled.h  oledfont.h  radio.h  setup.sh
reserved/: mplayerRadio.c  oled.h
src/: CMakeLists.txt  main.c  player.c  player.h  storage.c
src/include/: storage.h  utils.h
